# prom-remote-api

./: Cargo.toml  Makefile  README.md  build.rs  readme.org
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
examples/: actix-demo.rs  simple.rs  warp-demo.rs
prompb/: remote.proto  types.proto
src/: lib.rs  main.rs  types.rs  util.rs  warp_adapter.rs
src/web/: actix.rs  mod.rs  warp.rs
