[package]
name = "prom-remote-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
prost = "0.11.6"
snap = "1.1.0"
tokio = { version = "1.24.1", features = ["full"], optional = true }
warp = { version = "0.3.2", optional = true }

[build-dependencies]
prost-build = { version = "0.11.6" }

[features]
default = []
warp = ["dep:warp"]
tokio = ["dep:tokio"]

[[example]]
name = "simple"
required-features = ["warp", "tokio"]
path = "./examples/simple.rs"
