[package]
name = "prom-remote-api"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Prometheus remote storage API for Rust"
homepage = "https://github.com/jiacai2050/prom-remote-api"
repository = "https://github.com/jiacai2050/prom-remote-api"
authors = ["Jiacai Liu <dev@liujiacai.net>"]
keywords = ["prometheus", "API", "remote", "storage"]
readme = "README.md"

[dependencies]
async-trait = "0.1.61"
prost = "0.11.6"
snap = "1.1.0"
tokio = { version = "1.24.1", features = ["macros"], optional = true }
warp = { version = "0.3.2", optional = true }

[build-dependencies]
prost-build = { version = "0.11.6" }

[features]
default = []
warp = ["dep:warp"]
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "simple"
required-features = ["warp", "tokio"]
path = "./examples/simple.rs"
