[package]
name = "prom-remote-api"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "Prometheus remote storage API for Rust"
homepage = "https://github.com/jiacai2050/prom-remote-api"
repository = "https://github.com/jiacai2050/prom-remote-api"
authors = ["Jiacai Liu <dev@liujiacai.net>"]
keywords = ["prometheus", "API", "remote", "storage"]
readme = "README.md"

[dependencies]
actix-web = { version = "4", optional = true }
async-trait = "0.1.61"
bytes = "1.4.0"
env_logger = "0.10.0"
futures = "0.3.25"
prost = "0.11.6"
snap = "1.1.0"
tokio = { version = "1.24.1", features = ["macros"], optional = true }
warp = { version = "0.3.2", optional = true }

[build-dependencies]
prost-build = { version = "0.11.6" }

[features]
default = []
warp = ["dep:warp"]
tokio = ["dep:tokio"]
actix = ["dep:actix-web"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "warp-demo"
required-features = ["warp", "tokio"]
path = "./examples/warp-demo.rs"

[[example]]
name = "actix-demo"
required-features = ["actix"]
path = "./examples/actix-demo.rs"
